// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser parseType parses nested types 1`] = `
Object {
  "kind": "ListType",
  "loc": Object {
    "end": 9,
    "start": 0,
  },
  "type": Object {
    "kind": "MaybeType",
    "loc": Object {
      "end": 8,
      "start": 1,
    },
    "type": Object {
      "kind": "NamedType",
      "loc": Object {
        "end": 7,
        "start": 1,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 7,
          "start": 1,
        },
        "value": "MyType",
      },
    },
  },
}
`;

exports[`Parser parseType parses optional types 1`] = `
Object {
  "kind": "MaybeType",
  "loc": Object {
    "end": 7,
    "start": 0,
  },
  "type": Object {
    "kind": "NamedType",
    "loc": Object {
      "end": 6,
      "start": 0,
    },
    "name": Object {
      "kind": "Name",
      "loc": Object {
        "end": 6,
        "start": 0,
      },
      "value": "MyType",
    },
  },
}
`;

exports[`Parser parseValue parses block strings 1`] = `
Object {
  "block": true,
  "kind": "StringValue",
  "loc": Object {
    "end": 10,
    "start": 0,
  },
  "value": "long",
}
`;
